[gd_scene load_steps=8 format=3 uid="uid://dq1372dbm1qi8"]

[ext_resource type="Script" path="res://Characters/BaseCharacter/base_enemy.gd" id="1_uaxxj"]
[ext_resource type="Texture2D" uid="uid://cqtkrnwekipvg" path="res://Assets/tile_0127.png" id="2_0053t"]
[ext_resource type="Script" path="res://Components/hitbox.gd" id="2_hn764"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g0bun"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0053t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ngnp2"]
radius = 8.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5nvk"]
size = Vector2(18, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvpjh"]
size = Vector2(16, 20)

[node name="BaseEnemy" type="CharacterBody2D" node_paths=PackedStringArray("hp_bar", "animated_sprite", "stop_timer", "hitbox_collision") groups=["Enemy"]]
position = Vector2(40, 168)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_uaxxj")
speed = 10
attack = 15
hp_bar = NodePath("HPBar")
animated_sprite = NodePath("AnimatedSprite2D")
stop_timer = NodePath("StopTimer")
hitbox_collision = NodePath("Hitbox/CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g0bun")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ngnp2")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("2_hn764")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(17, 1)
shape = SubResource("RectangleShape2D_b5nvk")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_mvpjh")

[node name="HPBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -16.0
offset_right = 10.0
offset_bottom = -12.0
value = 50.0
show_percentage = false

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
